@@ -2716,4 +2716,5 @@ Multi-processing and spectral output are supported.
 
 Added crude ability to read and convert spectra to RGB in ximage,
 ra_bmp, and ra_rgbe programs.  Also updated fast tone-mapping
-library to handle spectral HSR inputs at the same time.
+library to handle spectral HSR inputs at the same time.  HSR
+input handling was added in a similar fashion to pcond and pvalue.
